--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
         </div>
     </header>
 
+    <main id="site_main">
+        <div></div>
+    </main>
 
-    <main id="site_main"></main>
+
     <footer id="site_footer"></footer>
     
 </body>
