--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
     </header>
 
     <main id="site_main">
-        <div></div>
+        <div class="blue_block">
+            <div class="pink_block">
+                
+            </div>
+        </div>
+
+        
     </main>
 
 
