--- a/index.html
+++ b/index.html
@@ -110,7 +110,17 @@
     </main>
 
 
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        <section class="final_row">
+            <div class="final_information">
+                <span class="footer_information">logo</span>
+                <span class="footer_information">bottone</span>
+            </div>
+        </section>
+
+       
+
+    </footer>
     
 </body>
 </html>
