--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -92,12 +92,17 @@
          <section id="third_row">
             <div class="conteiner_row">
                 <div class="information">
-                     <div class="banner_2">
-
+                     <div class="banner_3">
+                        
                      </div>
-                     <div class="description">
-
+                     <div class="description_3">
+                        <span class="information_1"><strong>Da pochi a un fandom </strong></span>
+                        <div class="info">
+                            <span>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</span>
+    
+                        </div>
                      </div>
+
                 </div>
             </div>
          </section>
