--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -56,8 +56,8 @@
             <div class="conteiner_row">
                 <div class="information">
                      <div class="banner_1">
-                      
-                     </div>
+
+                    </div>
                      <div class="description">
                     <span class="information_1"><strong>Un luogo a invito </strong></span>
                     <span class="information_1"><strong>con tutto lo</strong> </span>  
@@ -109,7 +109,18 @@
 
          <section class="grey">
             <div class="green_row">
+                <h3 id="green_block">Tecnologia affidabile per tenersi in contatto</h3>
+                <span>Video e audio a hassa latenza ti faranno sentire come se foste tutti nella stessa stan. Fai ciao in video. Guarda gli amici giocare in streaming, o riunitevi in una sessione di diesgno con la condivisione schermo.</span>
 
+                <img src="/assets/item4-big.svg" alt="">
+            </div>
+            <div id="download">
+                <div id="background">
+                      <h3>Pronto a iniziare la tua avventura?</h3>
+                </div>
+                <div class="button">
+                <button class="blue_download">&DownArrow; Scarica per Mac</button>
+                </div>
             </div>
          </section>
 
