--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body class="debug">
 
@@ -14,7 +14,7 @@
             <div class="conteiner">
                 <div class="row">
                   <div class="col-1">
-                      <img src="/assets/logo.svg" alt="">
+                      <img src="./assets/logo.svg" alt="">
                   </div>
                    <div class="col-2">
                     <a href="">Scarica</a>
@@ -121,7 +121,7 @@
                 <h3 id="green_block">Tecnologia affidabile per tenersi in contatto</h3>
                 <span>Video e audio a hassa latenza ti faranno sentire come se foste tutti nella stessa stan. Fai ciao in video. Guarda gli amici giocare in streaming, o riunitevi in una sessione di diesgno con la condivisione schermo.</span>
 
-                <img src="/assets/item4-big.svg" alt="">
+                <img src="./assets/item4-big.svg" alt="">
             </div>
             <div id="download">
                 <div id="background">
@@ -138,7 +138,7 @@
                 <div class="col-4">
                     <h3 class="botton_title">Il tuo posto per parlare</h3>
                     <div class="flag">
-                        <img src="/assets/ita.png" alt="" style="width: 25px;"> italiano &DownArrow;
+                        <img src="./assets/ita.png" alt="" style="width: 25px;"> italiano &DownArrow;
                     </div>
                     <div class="loghi">
                         <svg width="24" height="24" viewBox="0 0 24 24" class="socialIcon_"><path fill="currentColor" d="M8.2177 20.2976C15.798 20.2976 19.9327 14.0329 19.9327 8.58261V8.05011C20.7362 7.46091 21.435 6.74089 22 5.92012C21.2567 6.26235 20.4637 6.48437 19.6507 6.57791C20.5139 6.06164 21.1597 5.24885 21.4675 4.2913C20.6598 4.76183 19.7822 5.10021 18.8677 5.29365C17.3053 3.64491 14.7069 3.56109 13.0415 5.10571C11.9701 6.10222 11.5157 7.59694 11.8512 9.02114C8.54594 8.85772 5.46574 7.29769 3.37823 4.72983C2.28095 6.60789 2.84519 9.01622 4.66249 10.2114C4.00661 10.1858 3.36464 10.0146 2.78309 9.71026V9.7729C2.78257 11.7293 4.15628 13.417 6.07204 13.8136C5.46884 13.9751 4.83671 13.9965 4.22396 13.8763C4.76475 15.5538 6.31437 16.7003 8.07674 16.7267C6.62377 17.8749 4.82287 18.4936 2.97103 18.4808C2.65779 18.4808 2.31323 18.4495 2 18.4182C3.84433 19.6513 6.0148 20.3057 8.23336 20.2976"></path></svg>
@@ -198,7 +198,7 @@
     <footer id="site_footer">
         <section class="final_row">
             <div class="final_information">
-                <img src="/assets/logo.svg" alt="">            
+                <img src="./assets/logo.svg" alt="">            
                 <button class="registrati">registrati</button>         
             </div>
         </section>
